-Added new improved sprites for all the eye valley enemies, and re-animated all of them to have smoother and more detailed animations
-Changed the behavior of some of the normal eye valley enemies to make them more interesting
-Added new fleshy variants of all the regular eye valley enemies that have entirely new behavior from their original counterparts


New Nose Cultist Dungeon:

-Stuff lol (Too lazy to write a changelog and it isnt fully complete yet)


Little Eye Quest Rework:

-Stuff lol (Again, too lazy to write a changelog and this feature is not fully complete yet either)


Catacomb Improvements:

-Improved each individual catacomb room in general, they are no longer super cluttered with furniture and dont have cobwebs in them anymore to prevent inventory clutter while exploring
-Changed some of the light source furniture tiles in both layers of the catacombs to make it aesthetically better and cleaner looking
-Added new moss blocks that grows on catacomb bricks, instead of there just being random clumps of swampy cemetery dirt in the catacombs
-Resprited all of the plants and vines in the catacombs
-Giant flowers now grow naturally in the second layer of the catacombs instead of always being pre-generated in the same locations in each room
-Removed all the previous catacomb layer 2 enemies, and added a large amount of entirely new enemies, some with new gimmicks and others with improved gimmicks of old enemies
-Added fly particles to some of the coffin tiles, and removed the literal actuated poo blocks out of the catacomb rooms entirely
-Daffodil's arena and big bone's arena now have new custom backgrounds, both made by Hat in a river


New Farming Mechanic:

-The blooms mechanic is a farming mechanic where you can plant special "seeds" on special farmland blocks, which grow into a different plant depending on the seed type you planted
-When the plant is fully grown, it will produce one of a few different blooms that you can pick off the plant and eat