@@ -17,6 +17,8 @@ namespace Spooky.Content.NPCs.Friendly
 {
     public class SuspiciousSkeleton : ModNPC  
     {
+        public const string ShopName = "Shop";
+
         public override void SetStaticDefaults()
         {
             Main.npcFrameCount[NPC.type] = 9;
@@ -89,15 +91,15 @@ namespace Spooky.Content.NPCs.Friendly
 
         public override void SetChatButtons(ref string button, ref string button2)
 		{
-			button = Language.GetTextValue("Mods.Spooky.Dialogue.SuspiciousSkeleton.ShopButton");
+			button = Language.GetTextValue("LegacyInterface.28");
 		}
 
-        public override void OnChatButtonClicked(bool firstButton, ref string shopName)
-        {
-            if (firstButton)
-            {
-                shopName = Language.GetTextValue("LegacyInterface.28");
-            }
+		public override void OnChatButtonClicked(bool firstButton, ref string shop) 
+		{
+			if (firstButton) 
+			{
+				shop = ShopName;
+			}
 		}
 
         public override string GetChat()
